[gd_scene load_steps=4 format=4 uid="uid://eiseghgy1gp4"]

[ext_resource type="Script" uid="uid://u7ag56bjiyh2" path="res://scripts/game/game_scene.gd" id="1_mixcd"]
[ext_resource type="TileSet" uid="uid://y6xxm3yub1qk" path="res://scenes/game/game_scene.tres" id="2_ydf3n"]
[ext_resource type="Script" uid="uid://lye14jpm20yx" path="res://scripts/game/unit_selection.gd" id="4_6hqhf"]

[node name="GameScene" type="Node2D" groups=["main_scene"]]
script = ExtResource("1_mixcd")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 20)
tile_map_data = PackedByteArray("AAADAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAA=")
tile_set = ExtResource("2_ydf3n")

[node name="HighlightLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 20)
tile_set = ExtResource("2_ydf3n")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MainUIContainer" type="MarginContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TopBar" type="HBoxContainer" parent="UILayer/MainUIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TurnIndicator" type="Label" parent="UILayer/MainUIContainer/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Red Player's Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopSpacer" type="Control" parent="UILayer/MainUIContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RelicStatus" type="Label" parent="UILayer/MainUIContainer/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Relic: Not Active"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="UILayer/MainUIContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="EndTurnButton" type="Button" parent="UILayer/MainUIContainer/BottomBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "End Turn"

[node name="ResetTurnButton" type="Button" parent="UILayer/MainUIContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset Turn"

[node name="ReviveButton" type="Button" parent="UILayer/MainUIContainer/BottomBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Revive Unit"

[node name="ReviveCount" type="Label" parent="UILayer/MainUIContainer/BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Revives: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomSpacer" type="Control" parent="UILayer/MainUIContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VictoryMessage" type="Label" parent="UILayer/MainUIContainer"]
layout_mode = 2

[node name="UnitSelection" type="Node2D" parent="."]
script = ExtResource("4_6hqhf")
metadata/_custom_type_script = "uid://lye14jpm20yx"
